staging-sp3/fp-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress-service
spec:
  ports:
  - port: 80
    protocol: TCP
  type: LoadBalancer
  selector:
    app: wordpress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
spec:
  selector:
    matchLabels:
      app: wordpress
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress
        ports:
        - containerPort: 80
      restartPolicy: Always
---
