staging-sp3/rule-ingress-nginx.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: s-ingress
  annotations:
    ## Untuk menaikan batas upload file
    nginx.org/client-max-body-size: "10m"
    ## Memaksa jalan di https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:

## Service Location n landingpage
  - host: lp.gonnabegood.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: landingpage
          servicePort: 80

## Service Location n socialmedia
  - host: fesbuk.gonnabegood.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: socialmedia
          servicePort: 80
